# gconanpy

./: README.md  gconanpy-start.tar  pyproject.toml
gconanpy/: README.md  ToString.py  __init__.py  attributes.py  bytesify.py  cli.py  convert.py  debug.py  dicts.py  dissectors.py  extend.py  find.py  finders.py  iters.py  lazy.py  maps.py  maptools.py  metafunc.py  numpandas.py  reg.py  seq.py  skippers.py  strings.py  strings.pyi  testers.py  trivial.py  typevars.py  wrap.py  wrappers.py  wrappers.pyi
gconanpy/IO/: README.md  local.py  web.py
gconanpy/access/: README.md  __init__.py  attributes.py  dissectors.py  find.py  nested.py
gconanpy/collection/: README.md  __init__.pyi  classes.py
gconanpy/io/: local.py  web.py
gconanpy/iters/: README.md  __init__.py  duck.py  filters.py  find.py  seq.py
gconanpy/mapping/: README.md  __init__.py  attrmap.py  bases.py  bases.pyi  dicts.py  grids.py  map_funcs.py  stringball.py
gconanpy/meta/: README.md  __init__.py  access.py  classes.py  funcs.py  metaclass.py  typeshed.py
gconanpy/polymorphic/: README.md  __init__.py  __init__.pyi
tests/: README.md  test_IO.py  test_ToString.py  test_access.py  test_attributes.py  test_cli.py  test_collection.py  test_dicts.py  test_dissectors.py  test_extend.py  test_find.py  test_iters.py  test_mapping.py  test_maps.py  test_meta.py  test_metafunc.py  test_nested.py  test_numpandas.py  test_polymorphic.py  test_reg.py  test_seq.py  test_strings.py  test_wrappers.py  test_z_grids.py  testers.py
