[tool.poetry]
name = "gconanpy"
version = "0.1.8"
description = "Basic Python tools reused by Greg Conan across multiple projects."

authors = ["Greg Conan <gregmconan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^44.0.2"
pathvalidate = "^3.2.3"
pandas = "^2.2.3"
regex = "^2024.11.6"
requests = "^2.32.3"
pympler = "^1.1"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
