[tool.poetry]
name = "gconanpy"
version = "0.22.1"
description = "Basic Python tools reused by Greg Conan across multiple projects."

authors = ["Greg Conan <gregmconan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^44.0.2"
pathvalidate = "^3.2.3"
pandas = "^2.2.3"
regex = "^2024.11.6"
requests = "^2.32.3"
pympler = "^1.1"
pytest = "^8.3.5"
bs4 = "^0.0.2"
makefun = "^1.15.6"
inflection = "^0.5.1"
more-itertools = "^10.7.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
